--- a/Index.html
+++ b/Index.html
@@ -10,17 +10,17 @@
 	<meta name="description">
 
 	<!--CSS custom styles-->
-	<link href="Content/Site.css" rel="stylesheet" />
+	<link href="/Content/Site.css" rel="stylesheet" />
 
 	<!--jQuery-->
-	<script src="Scripts/jquery-3.4.1.min.js"></script>
+	<script src="/Scripts/jquery-3.4.1.min.js"></script>
 
 	<!--Bootstrap-->
-	<link href="Content/bootstrap.min.css" rel="stylesheet" />
-	<script src="Scripts/bootstrap.min.js"></script>
+	<link href="/Content/bootstrap.min.css" rel="stylesheet" />
+	<script src="/Scripts/bootstrap.min.js"></script>
 
 	<!--Fontawesome fonts-->
-	<link href="Content/vendor/fontawesome-free-5.9.0-web/css/all.min.css" rel="stylesheet" />
+	<link href="/Content/vendor/fontawesome-free-5.9.0-web/css/all.min.css" rel="stylesheet" />
 
 </head>
 
@@ -168,6 +168,13 @@
 			</div>
 		</div>
 	</div>
+
+<!-- Visual Studio Browser Link -->
+<script type="application/json" id="__browserLink_initializationData">
+    {"appName":"Chrome","requestId":"dd6f4581a08045bd81c8623df593011f"}
+</script>
+<script type="text/javascript" src="http://localhost:50652/24a3a87223ac4df98963b5342a536cfa/browserLink" async="async"></script>
+<!-- End Browser Link -->
 
 </body>
 </html>
