--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 		</div>
 	</div>
 
-<!-- Visual Studio Browser Link -->
-<script type="application/json" id="__browserLink_initializationData">
-    {"appName":"Chrome","requestId":"eff8e5dcd2304ac6b9e93c8f3440341b"}
+<script type="text/javascript">
+$("#menu-toggle").click(function (e) {
+    e.preventDefault();
+    $("#wrapper").toggleClass("toggled");
+});
 </script>
-<script type="text/javascript" src="http://localhost:50652/24a3a87223ac4df98963b5342a536cfa/browserLink" async="async"></script>
-<!-- End Browser Link -->
 
 </body>
 </html>
