with images link

--- a/setup.html
+++ b/setup.html
@@ -130,14 +130,14 @@
 	<li>
 		Open Command Prompt by pressing <kbd>Win+R</kbd> and then type <code>cmd</code> in run window. Command Prompt will be opened. Get the name of SQL server instances by typing <code>&nbsp;sqllocaldb i&nbsp;</code> in your command prompt.
 		<br>
-		<img src="/images/Know-Sql-Instances.png" class="my-2 rounded img-fluid img-thumbnail" alt="SQL Server Instances">
+		<img src="https://sajjadarifgul.github.io/eCommerceMVCDocs/images/Know-Sql-Instances.png" class="my-2 rounded img-fluid img-thumbnail" alt="SQL Server Instances">
 	</li>
 	<li>
 		Open eCommerce MVC in Visual Studio.
 	</li>
 	<li>
 		Open web.config file from eCommerce MVC project and search for <code>eCommerceConnectionString-OK</code> in <code>connectionStrings</code> tag.
-		<br><img src="/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config">
+		<br><img src="https://sajjadarifgul.github.io/eCommerceMVCDocs/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config">
 	</li>
 	<li>Change <code>&nbsp;MSSQLLocalDB&nbsp;</code> with your preferred server instance name.</li>
 	<li>Open Tools&gt;Nuget Packager Manager&gt;Nuget Package Manager Console window from Menu in Visual Studio</li>
@@ -159,7 +159,7 @@
 	</li>
 	<li>
 		Open web.config file from eCommerce MVC project and search for <code>eCommerceConnectionString-OK</code> in <code>connectionStrings</code> tag.
-		<br><img src="/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config">
+		<br><img src="https://sajjadarifgul.github.io/eCommerceMVCDocs/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config">
 	</li>
 	<li>
 		Change connection string value to your connection string from step 1.
@@ -247,13 +247,5 @@
 		    $("#wrapper").toggleClass("toggled");
 		});
 	</script>
-
-<!-- Visual Studio Browser Link -->
-<script type="application/json" id="__browserLink_initializationData">
-    {"appName":"Chrome","requestId":"755409af936440a686af1fd762c15b84"}
-</script>
-<script type="text/javascript" src="http://localhost:50652/24a3a87223ac4df98963b5342a536cfa/browserLink" async="async"></script>
-<!-- End Browser Link -->
-
 </body>
 </html>
