--- a/setup.html
+++ b/setup.html
@@ -235,7 +235,7 @@
 </div>
 <hr />
 <strong>
-	For website level configurations e.g. Application Name, Currency Symbol, Payment Methods etc check <a href="/configurations.html">configurations</a>.
+	For website level configurations e.g. Application Name, Currency Symbol, Payment Methods etc check <a href="https://sajjadarifgul.github.io/eCommerceMVCDocs/configurations.html">configurations</a>.
 </strong>
 				<div class="text-center pb-5 mt-4" style="border-style: dashed none none none;"></div>
 			</div>
@@ -247,5 +247,6 @@
 		    $("#wrapper").toggleClass("toggled");
 		});
 	</script>
+
 </body>
 </html>
