--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -209,7 +209,7 @@
 		var url = $(this).attr("data-pagename");
 		$("#response-holder", ".response-container").html("");
 
-		$.ajax({ url: url})
+		$.ajax({ url: 'https://sajjadarifgul.github.io/eCommerceMVCDocs' + url})
 		.done(function (response) {
 			$("#response-holder", ".response-container").html(response);
 			$(".response-loader", ".response-container").hide();
@@ -231,12 +231,6 @@
 		});
 	</script>
 
-<!-- Visual Studio Browser Link -->
-<script type="application/json" id="__browserLink_initializationData">
-    {"appName":"Chrome","requestId":"a463a89209dc43c29ceccf37886fc7ba"}
-</script>
-<script type="text/javascript" src="http://localhost:65383/5d4aaf6785be415a9d34bcfd5983a15e/browserLink" async="async"></script>
-<!-- End Browser Link -->
 
 </body>
 </html>
