youtube videos embedded

--- a/setup.html
+++ b/setup.html
@@ -237,6 +237,12 @@
 <strong>
 	For website level configurations e.g. Application Name, Currency Symbol, Payment Methods etc check <a href="https://sajjadarifgul.github.io/eCommerceMVCDocs/configurations.html">configurations</a>.
 </strong>
+<hr>
+<iframe width="100%" height="550"
+		src="https://www.youtube.com/embed/0gGyCxTjRBY"
+		frameborder="0"
+		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+		allowfullscreen></iframe>
 				<div class="text-center pb-5 mt-4" style="border-style: dashed none none none;"></div>
 			</div>
 		</div>
