--- a/configurations.html
+++ b/configurations.html
@@ -260,6 +260,11 @@
 </h3>
 <p>
 	eCommerce MVC provides Credit Card payment option. If you set the <code>EnableCreditCardPayment</code> to <code>true</code> in Systems Configuration, you must have to setup your account with Authorize .Net as described in the video and change the following keys in the <code>appSettings</code> node in <code>web.config</code> file. You can check the implementation of Authorize .Net payment API in <code>AuthorizeNetHelper</code> class in <code>Helpers</code> folder in main <code>Code</code> folder in eCommerceMVC module.
+	<iframe width="100%" height="550"
+		src="https://www.youtube.com/embed/TT1Ag6GDIh0"
+		frameborder="0"
+		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+		allowfullscreen></iframe>
 	<div class="alert alert-danger" role="alert">
 		Set the value of <code>AuthorizeNet_SandBox</code> to <code>false</code> so eCommerce MVC can process real transactions. If you need to test Credit Card payments with Authorize .Net Sandbox account on eCommerce MVC, set value of <code>AuthorizeNet_SandBox</code> to <code>true</code>.
 	</div>
