--- a/demo-video.html
+++ b/demo-video.html
@@ -115,7 +115,7 @@
 </p>
 
 <iframe width="100%" height="550"
-		src="https://www.youtube.com/embed/oBsMQOHWiWM"
+		src="https://www.youtube.com/embed/cYyaR5z8xGc"
 		frameborder="0"
 		allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 		allowfullscreen></iframe>
