--- a/demo.html
+++ b/demo.html
@@ -6,8 +6,6 @@
       <title>eCommerce MVC Demo - eCommerce Website ASP .Net MVC</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <!-- App favicon -->
-      <link rel="shortcut icon" href="files/assets/images/favicon.ico">
       <style>
          div.center {
          	text-align: center;
@@ -21,7 +19,7 @@
          <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to http://ecommerce-demo.somee.com/.</p>
          <a href="http://ecommerce-demo.somee.com/" target="_blank" id="ecommerceDemoLink">http://ecommerce-demo.somee.com/</a>
       </div>
-      <script src="files/assets/js/jquery.min.js"></script>
+      <script src="Scripts/jquery-3.4.1.min.js"></script>
       <script type="text/javascript">
          function pageRedirect() {
              $("#ecommerceDemoLink").trigger("click");
