--- a/demo-data.html
+++ b/demo-data.html
@@ -89,13 +89,13 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 						<li class="nav-item text-nowrap">
-							<a class="nav-link" href="http://www.sajjadgul.com/projects-link/eCommerce-ASP-Net-MVC" target="_blank">
+							<a class="nav-link" href="http://ecommerce.aspdemos.com/" target="_blank">
 								<i class="mr-1 fas fa-external-link-alt"></i>
 								Online Demo
 							</a>
 						</li>
 						<li class="nav-item text-nowrap">
-							<a class="nav-link" href="http://www.sajjadgul.com/projects-link/eCommerce-ASP-Net-MVC" target="_blank">
+							<a class="nav-link" href="https://codecanyon.net/item/ecommerce-website-project-in-asp-net-mvc-c-ecommerce-mvc/24217231" target="_blank">
 								<i class="mr-1 fas fa-shopping-cart"></i>
 								Purchase eCommerce MVC
 							</a>
@@ -112,7 +112,7 @@
 </h3>
 <hr />
 <p class="lead">
-	Follow below steps to import demo data of eCommerce MVC as it shows on the <a href="http://www.sajjadgul.com/projects-link/eCommerce-ASP-Net-MVC" target="_blank">eCommerce MVC demo site</a> on your system.
+	Follow below steps to import demo data of eCommerce MVC as it shows on the <a href="http://ecommerce.aspdemos.com/" target="_blank">eCommerce MVC demo site</a> on your system.
 </p>
 <h3>
 	Folder Files
