Demo link update

--- a/demo.html
+++ b/demo.html
@@ -16,14 +16,14 @@
    </head>
    <body>
       <div class="center">
-         <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to http://ecommerce.aspdemos.com/.</p>
-         <a href="http://ecommerce.aspdemos.com/" target="_blank" id="ecommerceDemoLink">http://ecommerce.aspdemos.com/</a>
+         <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to http://ecommercemvc.aspdemos.com/.</p>
+         <a href="http://ecommercemvc.aspdemos.com/" target="_blank" id="ecommerceDemoLink">http://ecommercemvc.aspdemos.com/</a>
       </div>
       <script src="Scripts/jquery-3.4.1.min.js"></script>
       <script type="text/javascript">
          function pageRedirect() {
              $("#ecommerceDemoLink").trigger("click");
-             window.open("http://ecommerce.aspdemos.com/");
+             window.open("http://ecommercemvc.aspdemos.com/");
          }      
          setTimeout("pageRedirect()", 3000);
       </script>
