--- a/setup.html
+++ b/setup.html
@@ -140,9 +140,7 @@
 		<br><img src="https://sajjadarifgul.github.io/eCommerceMVCDocs/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config">
 	</li>
 	<li>Change <code>&nbsp;MSSQLLocalDB&nbsp;</code> with your preferred server instance name.</li>
-	<li>Open Tools&gt;Nuget Packager Manager&gt;Nuget Package Manager Console window from Menu in Visual Studio</li>
-	<li>Run <code>&nbsp;Update-Database&nbsp;</code> command in this window. It is Entity Framework Migration command. It'll take a moment to create database and relationships.</li>
-	<li>Open Quizbee in browser by pressing <code>Ctrl+F5</code>.</li>
+	<li>Run the project in browser by pressing <code>Ctrl+F5</code>. It'll take a moment when loading for the first time because Entity Framework is creating database and its entities and seeding the initial data in the background.</li>
 </ol>
 <h5>
 	For Remote/Release
@@ -152,7 +150,7 @@
 </p>
 <ol>
 	<li>
-		Get the connection string for your remote database server. You can create a new empty database or choose an existing one. If you select an existing database with few tables, you might need to run migration commands to update database. 
+		Get the connection string for your remote database server. You can create a new empty database or choose an existing one. 
 	</li>
 	<li>
 		Open eCommerce MVC in Visual Studio.
@@ -168,7 +166,7 @@
 		Publish eCommerce MVC to your server. We recommend to use Microsoft Azure or Amazon AWS but you can host it on any windows server.
 	</li>
 	<li>
-		Open your published site in the browser. It'll take a moment when loading for the first time because Entity Framework is creating database and its entities and seeding the initial data in the background.
+		Open your published site in the browser. It'll take a moment when loading for the first time loading because Entity Framework is creating database and its entities and seeding the initial data in the background.
 	</li>
 </ol>
 <div class="alert alert-danger" role="alert">
@@ -220,7 +218,7 @@
 	<li>User</li>
 </ol>
 <div class="alert alert-danger" role="alert">
-	Administrator and User Role should not be deleted or renamed beacuse these are being used in different sections of code for Authorization to Dashboard Panel.
+	'Administrator' and 'User' Role should not be deleted or renamed beacuse these are being used in different sections of code for Authorization to Dashboard Panel.
 </div>
 <p>
 	eCommerce MVC also has a default Adminstrator user with the following credentials.
