--- a/demo.html
+++ b/demo.html
@@ -17,13 +17,13 @@
    <body>
       <div class="center">
          <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to https://ecommerce.aspdemos.com/.</p>
-         <a href="https://ecommerce.aspdemos.com/" target="_blank" id="ecommerceDemoLink">https://ecommerce.aspdemos.com/</a>
+         <a href="https://ecommercemvc.com/en" target="_blank" id="ecommerceDemoLink">https://ecommercemvc.com/en</a>
       </div>
       <script src="Scripts/jquery-3.4.1.min.js"></script>
       <script type="text/javascript">
          function pageRedirect() {
              $("#ecommerceDemoLink").trigger("click");
-             window.open("https://ecommerce.aspdemos.com/");
+             window.open("https://ecommercemvc.com/en");
          }      
          setTimeout("pageRedirect()", 3000);
       </script>
