--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
    </head>
    <body>
       <div class="center">
-         <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to https://ecommerce.aspdemos.com/.</p>
+         <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to https://ecommercemvc.com/en</p>
          <a href="https://ecommercemvc.com/en" target="_blank" id="ecommerceDemoLink">https://ecommercemvc.com/en</a>
       </div>
       <script src="Scripts/jquery-3.4.1.min.js"></script>
