demo redirection page styling

--- a/demo.html
+++ b/demo.html
@@ -1,23 +1,42 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
    <head>
       <meta charset="utf-8" />
       <title>eCommerce MVC Demo - eCommerce Website ASP .Net MVC</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <!--Bootstrap-->
+      <link href="https://sajjadarifgul.github.io/eCommerceMVCDocs/Content/bootstrap.min.css" rel="stylesheet" />
+      <script src="https://sajjadarifgul.github.io/eCommerceMVCDocs/Scripts/bootstrap.min.js"></script>
       <style>
          div.center {
-         	text-align: center;
-         	padding: 40px 50px;
-         	font-size: 25px;
+         text-align: center;
+         padding: 40px 50px;
+         font-size: 25px;
          }
       </style>
    </head>
    <body>
-      <div class="center">
-         <p><strong>Note:</strong><br/>You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected to https://ecommercemvc.com/en</p>
-         <a href="https://ecommercemvc.com/en" target="_blank" id="ecommerceDemoLink">https://ecommercemvc.com/en</a>
+      <div class="center m-4">
+         <table class="table table-borderless table-hover">
+            <thead>
+               <tr>
+                  <th scope="col" colspan="4">Note</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td scope="row" colspan="4">
+                     You will be redirected to the eCommerce MVC Online Demo in 3 seconds. Sometimes CodeCanyon is unable to redirect to eCommerce MVC in demo preview page. Click on the below link if you are not redirected.
+                  </td>
+               </tr>
+               <tr>
+                  <td scope="row" colspan="4">
+                     <a href="https://ecommercemvc.com/en" target="_blank" id="ecommerceDemoLink">https://ecommercemvc.com/en</a>
+                  </td>
+               </tr>
+            </tbody>
+         </table>
       </div>
       <script src="Scripts/jquery-3.4.1.min.js"></script>
       <script type="text/javascript">
