Admin Dashboard Link added to demo page

--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
       </style>
    </head>
    <body>
-      <div class="center m-4">
+      <div class="center m-4 mt-3">
          <table class="table table-borderless table-hover">
             <thead>
                <tr>
@@ -41,6 +41,20 @@
                <tr>
                   <td scope="row" colspan="4">
                      <a href="https://ecommercemvc.com/en" target="_blank" id="ecommerceDemoLink">https://ecommercemvc.com/en</a>
+                  </td>
+               </tr>
+               <tr>
+                  <td scope="row" colspan="4" class="border-top"></td>
+               </tr>
+               <tr>
+                  <td scope="row" colspan="4" class="small py-4">
+                     Use following credentials to login as an <strong>Admin</strong>
+                     <br>
+                     Username: <code>admin</code>
+                     <br>
+                     Password: <code>admin123</code>
+                     <br>
+                     Dasboard Link: <a href="https://ecommercemvc.com/en/dashboard" target="_blank">https://ecommercemvc.com/en/dashboard</a>                     
                   </td>
                </tr>
             </tbody>
