Admin Password Updated

--- a/demo.html
+++ b/demo.html
@@ -50,9 +50,9 @@
                   <td scope="row" colspan="4" class="small py-4">
                      Use following credentials to login as an <strong>Admin</strong>
                      <br>
-                     Username: <code>admin</code>
+                     Username: <code>demo</code>
                      <br>
-                     Password: <code>admin123</code>
+                     Password: <code>demo123</code>
                      <br>
                      Dasboard Link: <a href="https://ecommercemvc.com/en/dashboard" target="_blank">https://ecommercemvc.com/en/dashboard</a>                     
                   </td>
