--- a/code.html
+++ b/code.html
@@ -2,6 +2,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Mirrored from localhost:44355/code.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:42 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -131,7 +133,7 @@
 <p>
     There are five projects in main solution file of eCommerce MVC as follows.
     <br />
-    <img src="Content/images/code-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="Project Structure">
+    <img alt="" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/code-structure.png" style="" />
 </p>
 <h5>
     1) eCommerceMVC.Web
@@ -139,7 +141,7 @@
 <p>
     This is the main ASP .Net MVC Project in the solution. Users will be interacting with this module in their browsers. It has the following architecture.
     <br />
-    <img src="Content/images/code-structure-main-project.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce Project Structure">
+    <img alt="eCommerce Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/code-structure-main-project.png" style="" />
     <br>
     For Dashboard Panel, we have created a separate area named
     <code>Dashboard</code> which have separate routes, controllers, models and views.
@@ -761,7 +763,7 @@
 <p>
     This module is a Class Library Project in the main solution. This is responsible for handling everything related to Database.
     <br />
-    <img src="Content/images/ecommerce-data-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Data Project Structure">
+    <img alt="eCommerce.Data Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-data-structure.png" style="" />
     <br>
     eCommerce MVC uses Entity Framework Code First Migrations to create database. eCommerceContext class is derived from DbContext class of Entity Framework. Read more details of Database creation/setup etc in
     <a href="setup.html">Setup</a> section.
@@ -772,7 +774,7 @@
 <p>
     This module is also a Class Library Project which act as intermediary between eCommerce.Data database module and eCommerceMVC.Web module.
     <br />
-    <img src="Content/images/ecommerce-services-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Services Project Structure">
+    <img alt="eCommerce.Services Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-services-structure.png" style="" />
 </p>
 <h5>
     4) eCommerce.Entities
@@ -780,7 +782,7 @@
 <p>
     This module is also Class Library Project in the eCommerce MVC solution. This project contain all the business entities/classes. This is referenced in all other projects in the main solution.
     <br />
-    <img src="Content/images/ecommerce-entities-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Entities Project Structure">
+    <img alt="eCommerce.Entities Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-entities-structure.png" style="" />
 </p>
 <h5>
     5) eCommerce.Shared
@@ -788,7 +790,7 @@
 <p>
     This module contain a helpers, extensions, attributes and common enums that are shared accross all the other projects in the eCommerce MVC solution.
     <br />
-    <img src="Content/images/ecommerce-shared-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Shared Project Structure">
+    <img alt="eCommerce.Shared Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-shared-structure.png" style="" />
 </p>
                 </div>
             </div>
@@ -815,4 +817,6 @@
 
     
 </body>
+
+<!-- Mirrored from localhost:44355/code.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:43 GMT -->
 </html>
