--- a/configurations.html
+++ b/configurations.html
@@ -2,6 +2,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Mirrored from localhost:44355/configurations.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:43 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -388,4 +390,6 @@
 
     
 </body>
+
+<!-- Mirrored from localhost:44355/configurations.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:43 GMT -->
 </html>
