Revert "image link updates"
This reverts commit 86ee8d4c804c5641d27e9ba9a15fd6e11cb1ad3a.

--- a/code.html
+++ b/code.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from localhost:44355/code.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:42 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -133,7 +131,7 @@
 <p>
     There are five projects in main solution file of eCommerce MVC as follows.
     <br />
-    <img alt="" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/code-structure.png" style="" />
+    <img src="Content/images/code-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="Project Structure">
 </p>
 <h5>
     1) eCommerceMVC.Web
@@ -141,7 +139,7 @@
 <p>
     This is the main ASP .Net MVC Project in the solution. Users will be interacting with this module in their browsers. It has the following architecture.
     <br />
-    <img alt="eCommerce Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/code-structure-main-project.png" style="" />
+    <img src="Content/images/code-structure-main-project.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce Project Structure">
     <br>
     For Dashboard Panel, we have created a separate area named
     <code>Dashboard</code> which have separate routes, controllers, models and views.
@@ -763,7 +761,7 @@
 <p>
     This module is a Class Library Project in the main solution. This is responsible for handling everything related to Database.
     <br />
-    <img alt="eCommerce.Data Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-data-structure.png" style="" />
+    <img src="Content/images/ecommerce-data-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Data Project Structure">
     <br>
     eCommerce MVC uses Entity Framework Code First Migrations to create database. eCommerceContext class is derived from DbContext class of Entity Framework. Read more details of Database creation/setup etc in
     <a href="setup.html">Setup</a> section.
@@ -774,7 +772,7 @@
 <p>
     This module is also a Class Library Project which act as intermediary between eCommerce.Data database module and eCommerceMVC.Web module.
     <br />
-    <img alt="eCommerce.Services Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-services-structure.png" style="" />
+    <img src="Content/images/ecommerce-services-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Services Project Structure">
 </p>
 <h5>
     4) eCommerce.Entities
@@ -782,7 +780,7 @@
 <p>
     This module is also Class Library Project in the eCommerce MVC solution. This project contain all the business entities/classes. This is referenced in all other projects in the main solution.
     <br />
-    <img alt="eCommerce.Entities Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-entities-structure.png" style="" />
+    <img src="Content/images/ecommerce-entities-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Entities Project Structure">
 </p>
 <h5>
     5) eCommerce.Shared
@@ -790,7 +788,7 @@
 <p>
     This module contain a helpers, extensions, attributes and common enums that are shared accross all the other projects in the eCommerce MVC solution.
     <br />
-    <img alt="eCommerce.Shared Project Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-shared-structure.png" style="" />
+    <img src="Content/images/ecommerce-shared-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce.Shared Project Structure">
 </p>
                 </div>
             </div>
@@ -817,6 +815,4 @@
 
     
 </body>
-
-<!-- Mirrored from localhost:44355/code.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:43 GMT -->
 </html>
