--- a/faqs.html
+++ b/faqs.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from localhost:44355/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:43 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -144,12 +142,12 @@
         <li>
             Click on edit for the language you want to install the language pack.
             <br />
-            <img alt="ecommerce languages" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-languages.png" style="" />
+            <img src="Content/images/ecommerce-languages.png" class="my-2 rounded img-fluid img-thumbnail" />
         </li>
         <li>
             When language details page is open, go down to <i>Import Resources</i> section, Click on browse and select the language pack file.
             <br />
-            <img alt="language resource importing" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/language-resource-importing.png" style="" />
+            <img src="Content/images/language-resource-importing.png" class="my-2 rounded img-fluid img-thumbnail" />
         </li>
         <li>
             After selecting language pack file, click on import. This will take a few moments to import the language resources.
@@ -173,9 +171,9 @@
             This language pack file contains a <code>Language</code> node which contain child <code>Resource</code> node. Each resource node has Key, English and Value attributes. 
         </li>
         <li>
-            You need to add the translation according to English Text in your own language to Value attribute. Change all the resources Values in file and then save this file.
+            You need to add the translation according to English Text in your own language to Value attribute. Change all the resources Values in file and then save this file. 
             <br />
-            <img alt="language-pack-file-changes.png" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/language-pack-file-changes.png" style="" />
+            <img src="Content/images/language-pack-file-changes.png" class="my-2 rounded img-fluid img-thumbnail" />
         </li>
         <li>
             Then follow the steps mentioned in How To install language pack section to install this file.
@@ -250,6 +248,4 @@
 
     
 </body>
-
-<!-- Mirrored from localhost:44355/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:44 GMT -->
 </html>
