--- a/demo-data.html
+++ b/demo-data.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from localhost:44355/demo-data.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:44 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -132,14 +130,12 @@
 </h3>
 <p>
     These are the main folders you have when you extract the project from zip file you received from CodeCanyon.
-    <br />
-    <img alt="Folder Files Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/folder-structure.png" style="" />
+    <img src="Content/images/folder-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="Folder Files Structure">
 </p>
 <ol>
     <li>
         Open Database Scripts > Demo Data folder. You have <code>db-data-script.sql</code> file and <code>images</code> directory in this folder. Sql script file contains sql queries for demo data and 'images' folder has images related to the products added via this script.
-        <br />
-        <img alt="Demo Data Folder Files Structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/data-folder.png" style="" />
+        <img src="Content/images/data-folder.png" class="my-2 rounded img-fluid img-thumbnail" alt="Demo Data Folder Files Structure">
     </li>
     <li>
         Open <code>db-data-script.sql</code> file in your sql server and execute it on your database for eCommerce MVC. It will add categories, products, product pictures etc in your database.
@@ -176,6 +172,4 @@
 
     
 </body>
-
-<!-- Mirrored from localhost:44355/demo-data.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:45 GMT -->
 </html>
