--- a/setup.html
+++ b/setup.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from localhost:44355/setup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:41 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     
@@ -131,7 +129,7 @@
 <p>
     You receive the following files after extracting project compressed file.
     <br />
-    <img alt="eCommerce MVC folder structure" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/folder-structure.png" style="" />
+    <img src="Content/images/folder-structure.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC folder structure" />
 
     <ol>
         <li>
@@ -167,7 +165,7 @@
     <li>
         Open Command Prompt by pressing <kbd>Win+R</kbd> and then type <code>cmd</code> in run window. Command Prompt will be opened. Get the name of SQL server instances by typing <code>&nbsp;sqllocaldb i&nbsp;</code> in your command prompt.
         <br>
-        <img alt="SQL Server Instances" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/Know-Sql-Instances.png" style="" />
+        <img src="Content/images/Know-Sql-Instances.png" class="my-2 rounded img-fluid img-thumbnail" alt="SQL Server Instances" />
     </li>
     <li>
         Open eCommerce MVC in Visual Studio.
@@ -175,7 +173,7 @@
     <li>
         Open web.config file from eCommerce MVC project and search for <code>eCommerceConnectionString_OK</code> in <code>connectionStrings</code> tag.
         <br>
-        <img alt="eCommerce MVC Web.config" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-connectionstring.png" style="" />
+        <img src="Content/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config" />
     </li>
     <li>Change <code>&nbsp;MSSQLLocalDB&nbsp;</code> with your preferred server instance name.</li>
     <li>Run the project in browser by pressing <code>Ctrl+F5</code>. <strong>It'll take a moment when loading for the first time because Entity Framework is creating database and its entities and seeding the initial data in the background.</strong></li>
@@ -196,7 +194,7 @@
     <li>
         Open web.config file from eCommerce MVC project and search for <code>eCommerceConnectionString_OK</code> in <code>connectionStrings</code> tag.
         <br>
-        <img alt="eCommerce MVC Web.config" class="my-2 rounded img-fluid img-thumbnail" onerror="this.onerror=null;this.src=&#39;/content/images/site/default-picture.png&#39;;" src="content/images/ecommerce-connectionstring.png" style="" />
+        <img src="Content/images/ecommerce-connectionstring.png" class="my-2 rounded img-fluid img-thumbnail" alt="eCommerce MVC Web.config" />
     </li>
     <li>
         Change connection string value to your connection string from step 1.
@@ -271,6 +269,11 @@
     Remember to change admin credentials after deploying eCommerce MVC.
 </div>
 <hr />
+<h3 id="language_packs">
+    Language Packs
+</h3>
+
+
 <strong>
     For website level configurations e.g. Application Name, Currency Symbol, Payment Methods etc check <a href="configurations.html">configurations</a>.
 </strong>
@@ -299,6 +302,4 @@
 
     
 </body>
-
-<!-- Mirrored from localhost:44355/setup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Jul 2020 17:28:42 GMT -->
 </html>
