admin cred image link updated

--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,7 @@
             </tr>
             <tr>
                 <td scope="row" colspan="4" class="small py-4 bg-dark text-white">
-                    <img src="Content/images/ac.png" />
+                    <img src="content/images/ac.png" />
                     <br />
                     Dasboard Link: <a class="text-success" href="https://electronics-demo.ecommercemvc.com/en/dashboard" target="_blank">https://electronics-demo.ecommercemvc.com/en/dashboard</a>
                 </td>
