--- a/setup.html
+++ b/setup.html
@@ -262,8 +262,8 @@
 </p>
 <ul>
     <li>Email: <code>admin@email.com</code></li>
-    <li>Username: <code>admin</code></li>
-    <li>Password: <code>admin123</code></li>
+    <li>Username: <code>adm_use</code></li>
+    <li>Password: <code>adm_use123</code></li>
 </ul>
 <div class="alert alert-danger" role="alert">
     Remember to change admin credentials after deploying eCommerce MVC.
